--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,12 @@
         socket.emit('mensaje', {
             nombre: 'Erasmo'
         });
-        socket.on('mensaje', function(payload) {
+        socket.on('nuevo-mensaje', function(payload) {
             console.log('Escuchando:', payload);
+        });
+        socket.on('active-bands', function(bands) {
+            console.clear();
+            console.table(bands);
         });
     </script>
 </body>
